# memorylens

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  dashboard.py  demo_results.json  main.py  pyproject.toml  quick_demo.py  requirements.txt
.github/: CODEOWNERS  dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  new_backend.md  new_scenario.md
.github/workflows/: ci.yml  codeql.yml  greetings.yml  labeler.yml  pr-title.yml  release.yml  stale.yml
docs/: adding-a-new-backend.md  comparison-with-existing-tools.md  why-memory-evaluation-matters.md
evaluation/: benchmark.py  llm_judge.py  logger.py  metrics.py  stats.py
experiment_logs/: runs_summary_legacy.csv  test_run.json
memory/: cascading.py  naive.py  rag.py  rag_chunked.py  summary.py
memorylens/: __init__.py  api.py  cli.py
memorylens/evaluation/: benchmark.py  llm_judge.py  logger.py  metrics.py
memorylens/memory/: base.py  cascading.py  decay.py  entity.py  graph.py  rag.py  rag_chunked.py  summary.py  vector_faiss.py
memorylens/simulator/: conversation.py  facts.py
memorylens/simulator/scenarios/: __init__.py  base.py  customer_support.py  edtech.py  medical.py
memorylens/utils/: embeddings.py  llm.py  migrate_legacy_logs.py  providers.py  storage.py
paper/: memorylens_paper.md
simulator/: conversation.py  personas.py
simulator/scenarios/: edtech.py
tests/: test_imports.py  test_pipeline.py
utils/: embeddings.py  migrate_legacy_logs.py  providers.py  storage.py
